# Automatizacion-con-GitHub-Actions-y-pytest

./: .gitignore  CHANGELOG.md  Caso 100 - Automatizacion con GitHub Actions y pytest-1.docx  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
docs/: README.md  api.md  development.md
scripts/: demo_validation.py  verify_setup.py
src/: __init__.py  __main__.py  triangle_calculator.py
tests/: __init__.py  test_triangle_calculator.py
